# covirt-dmaivel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in
covirt/: main.cpp
covirt/analysis/: basic_block.cpp  basic_block.hpp  binary.cpp  binary.hpp  disasm.cpp  disasm.hpp
covirt/compiler/: default_vm_enter.cpp  default_vm_enter.hpp  generic_emitter.hpp  generic_lifter.cpp  generic_lifter.hpp  generic_vm.cpp  generic_vm.hpp  generic_vm_enter.hpp
covirt/obfuscator/: expression.cpp  expression.hpp  generic_transform.hpp
covirt/obfuscator/passes/: mba_pass.cpp  mba_pass.hpp  smc_pass.cpp  smc_pass.hpp
covirt/utils/: indicators.hpp  log.hpp  rand.hpp  termcolors.h
covirt/vm/: v0.cpp  v0.hpp
include/: covirt_stub.h
